--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xompile",
   "displayName": "xompile",
-  "description": "Your code history tracker for easier rollback",
+  "description": "A code history tracker for easier rollback in local production.",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.90.0"
@@ -23,6 +23,14 @@
       }
     ]
   },
+  "publisher": "Raghul R",
+  "icon": "icon.png",
+
+  "repository": { 
+    "type": "git",
+    "url": "https://github.com/raghulR003/xompile"
+  },
+
   "scripts": {
     "build": "esbuild", 
     "build:watch": "esbuild --watch",
